# autdec

./: .gitignore  LICENSE  README.md  citation.cff  pyproject.toml
autdec/: bb_cln.py  code_capacity.py  igraph_auts.py  perm_utils.py
bivariate_bicycle_codes/: bb_cln_data.csv  circuit_level_noise.ipynb
bivariate_bicycle_codes/graph_auts/: n144k12_graph_autsZ.pkl  n72k12_graph_autsX.pkl  n72k12_graph_autsZ.pkl  n90k8_graph_autsZ.pkl
code_capacity/: [[15,1,3]].ipynb  rm15_codecapacity_data.csv
